This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: warning: unused variable 'code'
Type: Stage: resolved
Components: Interpreter Core Versions: Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: Mark.Shannon, corona10, vstinner
Priority: normal Keywords: patch

Created on 2021-02-07 07:17 by corona10, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 24473 merged corona10, 2021-02-07 07:17
Messages (3)
msg386583 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2021-02-07 07:17
Python/ceval.c:4747:19: warning: unused variable 'code' [-Wunused-variable]
    PyCodeObject *code = (PyCodeObject *)_co;


Very nit compiler warning but should be fixed ;)
msg386936 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2021-02-14 06:54
New changeset 3cf0833f42ebde24f6435b838785ca4f946b988f by Dong-hee Na in branch 'master':
bpo-43152: Update assert statement to remove unused warning (GH-24473)
https://github.com/python/cpython/commit/3cf0833f42ebde24f6435b838785ca4f946b988f
msg386937 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2021-02-14 06:55
Now this issue is solved
Thank you Victor as the reviewer ;)
History
Date User Action Args
2022-04-11 14:59:41adminsetgithub: 87318
2021-02-14 06:55:48corona10setstatus: open -> closed

nosy: + vstinner
messages: + msg386937

resolution: fixed
stage: patch review -> resolved
2021-02-14 06:54:55corona10setmessages: + msg386936
2021-02-07 07:17:27corona10setkeywords: + patch
stage: patch review
pull_requests: + pull_request23266
2021-02-07 07:17:02corona10create