bpo-43152: Update assert statement to remove unused warning